# Car_ROS2

./: README.md  dockerfile  entrypoint.sh
src/car_cpp/: CMakeLists.txt  package.xml
src/car_cpp/src/: control_plugin.cpp  diffdrive_plugin_6w.cpp
src/car_python/: package.xml  setup.py
src/car_python/car/: joystick_control.py  keyboard_control.py
src/car_python/launch/: gazebo.launch.py  gazebo_empty_world.launch.py
src/car_python/urdf/: car.xacro
